WebKit/mac/WebView/WebHTMLView.mm
@@ -5195,11 +5195,18 @@ static void extractUnderlines(NSAttributedString *string, Vector<CompositionUnde
             Editor::Command command = [self coreCommandBySelector:selector];
             if (command.isSupported())
                 eventWasHandled = command.execute(event);
-            else {
+            else if ([self _canEdit]) {
+                // If the command is unsupported and the WebHTMLView is editable, then pass the
+                // selector to super and say that the event was handled. If the WebHTMLView is
+                // not editable, then do not say that the event was handled. This is important
+                // because of selectors like scrollPageDown:, which come as input method events
+                // when editing is enabled but keyboard events when it is not. These events are
+                // handled by the next responder in the responder chain.
                 _private->selectorForDoCommandBySelector = selector;
                 [super doCommandBySelector:selector];
                 _private->selectorForDoCommandBySelector = 0;
-            }
+            } else
+                eventWasHandled = false;
         }
 
         if (parameters)
